<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
            android:id="@+id/activity_home_title_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/home_title_text"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:layout_marginTop="30dp"/>

    <Button
            android:id="@+id/activity_home_recycler_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/home_button_recyclerview_text"/>

    <Button
            android:id="@+id/activity_home_customview_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/home_button_customview_text"/>

    <Button
            android:id="@+id/activity_home_arch_component_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/home_button_arch_component_text"/>

    <Button
            android:id="@+id/activity_home_value_animator_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/home_button_value_animator_text"/>

    <Button
            android:id="@+id/activity_home_constraintset_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/home_button_constraintset_text"/>

    <Button
            android:id="@+id/activity_home_motion_layout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/home_button_motion_layout_text"/>

    <Button
            android:id="@+id/activity_home_lottie_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/home_button_lottie_text"/>

    <Button
            android:id="@+id/activity_home_sensor_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/home_button_sensor_text"/>

    <Button
            android:id="@+id/activity_home_canvas_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/home_button_canvas_text"/>

    <Button
            android:id="@+id/activity_home_surface_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/home_button_surface_text"/>


</LinearLayout>